--- a/.github/workflows/deploy-vault-to-eks.yml
+++ b/.github/workflows/deploy-vault-to-eks.yml
@@ -1,4 +1,4 @@
-name: Deploy_vault
+name: Deploy vault
 
 on:
  
@@ -48,14 +48,15 @@ jobs:
 
       with:
           command: |
-              echo "\n* Deploying vault in kubernetes cluster"
-              curl -q -o helm-consul-values.yml https://raw.githubusercontent.com/skiyl9x/DevOps-CC21-demo/deploy/vault/helm-consul-values.yml
-              curl -q -o helm-vault-values.yml https://raw.githubusercontent.com/skiyl9x/DevOps-CC21-demo/deploy/vault/helm-vault-values.yml
-              curl -q -o vault_init_k8s.sh https://raw.githubusercontent.com/skiyl9x/vault-k8s/main/vault_init_k8s.sh
-              chmod +x vault_init_k8s.sh
-              ./vault_init_k8s.sh all_steps
-              echo "* Vault has been deployed"
-              echo "* Save $FILENAME in GitHub secrets"
-              curl -q -o git_secret.py https://raw.githubusercontent.com/skiyl9x/git_hub_secrets/main/git_secret.py
-              python3 git_secret.py --lg=$LOGIN --tk=$GITHUB_TOKEN --sn=$SECRET_NAME --repo=$REPOSITORY --filename=$FILENAME
-              echo "* The Vault keys has been saved"  
+              ls -lah
+              # echo "\n* Deploying vault in kubernetes cluster"
+              # curl -q -o helm-consul-values.yml https://raw.githubusercontent.com/skiyl9x/DevOps-CC21-demo/deploy/vault/helm-consul-values.yml
+              # curl -q -o helm-vault-values.yml https://raw.githubusercontent.com/skiyl9x/DevOps-CC21-demo/deploy/vault/helm-vault-values.yml
+              # curl -q -o vault_init_k8s.sh https://raw.githubusercontent.com/skiyl9x/vault-k8s/main/vault_init_k8s.sh
+              # chmod +x vault_init_k8s.sh
+              # ./vault_init_k8s.sh all_steps
+              # echo "* Vault has been deployed"
+              # echo "* Save $FILENAME in GitHub secrets"
+              # curl -q -o git_secret.py https://raw.githubusercontent.com/skiyl9x/git_hub_secrets/main/git_secret.py
+              # python3 git_secret.py --lg=$LOGIN --tk=$GITHUB_TOKEN --sn=$SECRET_NAME --repo=$REPOSITORY --filename=$FILENAME
+              # echo "* The Vault keys has been saved"  
