--- a/.github/workflows/deploy-vault-to-eks.yml
+++ b/.github/workflows/deploy-vault-to-eks.yml
@@ -48,12 +48,12 @@ jobs:
       with:
           command: |
               cd vault
-              echo "\n* Deploying vault in kubernetes cluster"
-              curl -q -o vault_init_k8s.sh https://raw.githubusercontent.com/skiyl9x/vault-k8s/main/vault_init_k8s.sh
-              chmod +x vault_init_k8s.sh
-              ./vault_init_k8s.sh all_steps
-              echo "* Vault has been deployed"
-              echo "* Save $FILENAME in GitHub secrets"
-              curl -q -o git_secret.py https://raw.githubusercontent.com/skiyl9x/git_hub_secrets/main/git_secret.py
-              python3 git_secret.py --lg=$LOGIN --tk=$GITHUB_TOKEN --sn=$SECRET_NAME --repo=$REPOSITORY --filename=$FILENAME
+              echo "\n* Deploying vault in kubernetes cluster" &&
+              curl -q -o vault_init_k8s.sh https://raw.githubusercontent.com/skiyl9x/vault-k8s/main/vault_init_k8s.sh && 
+              chmod +x vault_init_k8s.sh &&
+              ./vault_init_k8s.sh all_steps && 
+              echo "* Vault has been deployed" &&
+              echo "* Save $FILENAME in GitHub secrets" &&
+              curl -q -o git_secret.py https://raw.githubusercontent.com/skiyl9x/git_hub_secrets/main/git_secret.py &&
+              python3 git_secret.py --lg=$LOGIN --tk=$GITHUB_TOKEN --sn=$SECRET_NAME --repo=$REPOSITORY --filename=$FILENAME &&
               echo "* The Vault keys has been saved"  
