add storage class and modify pvc for mysql

--- a/.github/workflows/deploy-to-eks.yml
+++ b/.github/workflows/deploy-to-eks.yml
@@ -58,7 +58,7 @@ jobs:
       with:
           command: kubectl apply -f k8s/mysql/
 
-    - name: Deploying mysql
+    - name: Check mysql deploying
       uses: koslib/helm-eks-action@master
       env:
             KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_STAGING }}
