--- a/k8s/mysql/03-mysql.yml
+++ b/k8s/mysql/03-mysql.yml
@@ -35,7 +35,7 @@ spec:
       name: mysql-store
     spec:
       accessModes: ["ReadWriteOnce"]
-      storageClassName: "standard"
+      storageClassName: "my-storage-class"
       resources:
         requests:
           storage: 5Gi
