--- a/.github/workflows/build-application-CI.yml
+++ b/.github/workflows/build-application-CI.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - 'dev'
+      - 'main'
     paths:
       - 'data/Dockerfile-database'
       - 'data/wordpress.sql'
